[package]
name = "compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

doctest = false


[dependencies]

sp-runtime = { version = "2.0" }

num-rational = { version = "0.4" }
num-bigint = { version = "0.4" }

bigdecimal = { version ="0.3" }

bigfixed = { git = "https://github.com/alec-composable/numbers" }

